[B]Retrospect v5.1.8 - Changelog - 2020-02-13[/B]

This is a quick fix for an NPO issue. It also contains from version 5.1.7:
That update contains fixes for a number of channels (Dutch, Swedish, Belgian and Norwegian). We
also added some small improvements such as "air date" infolabels and a new context menu entry to
show the video information dialog window.

[B]Framework related[/B]
* Added: option for UriHandler to open a link as text (utf-8) in case no encoding was specified.
* Fixed: Amazon AWS sign-in
* Changed: json should always be text not bytes
* Updated: a bit more logging if no data was found for decryption
* Added: Check to see if external add-on is installed
* Added: Generic functionality to check for local or remote texture

[B]GUI/Settings/Language related[/B]
* Changed: Move 'expire' date to MediaItem (Fixes #1301)
* Translated: Dutch(nl_NL) translations
* Translated: Swedish (sv_SE) translations

[B]Channel related[/B]
* Fixed: Stievie became VTM GO. Only live streams are available (Fixes #1310)
* Removed: premium Norwegian channels (Fixes #1300)